Adding biblos search and facelets

--- a/Conocencia/src/main/webapp/WEB-INF/web.xml
+++ b/Conocencia/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,11 @@
    			org.springframework.web.context.ContextLoaderListener
   		</listener-class>
    </listener>
+   <listener>
+  		<listener-class>
+   			org.springframework.web.context.request.RequestContextListener
+  		</listener-class>
+   </listener>
 
    <!-- Project Stage Level -->
    <context-param>
