--- a/Conocencia/pom.xml
+++ b/Conocencia/pom.xml
@@ -83,6 +83,11 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>4.1.0.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-search</artifactId>
+			<version>4.1.1.Final</version>
+		</dependency>
 
 		<dependency>
 			<groupId>javassist</groupId>
@@ -102,6 +107,13 @@
 			<groupId>c3p0</groupId>
 			<artifactId>c3p0</artifactId>
 			<version>0.9.1.2</version>
+		</dependency>
+		
+		<!-- Facelets -->
+		<dependency>
+			<groupId>com.sun.facelets</groupId>
+			<artifactId>jsf-facelets</artifactId>
+			<version>1.1.14</version>
 		</dependency>
 	</dependencies>
 
