--- a/Conocencia/pom.xml
+++ b/Conocencia/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>Conocencia</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<properties>
-		<spring.version>3.1.1.RELEASE</spring.version>
+		<spring.version>[4.3.17,)</spring.version>
 	</properties>
 	<repositories>
 		<repository>
@@ -103,7 +103,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.20</version>
+			<version>[8.0.16,)</version>
 		</dependency>
 
 		<!-- c3p0 dependency -->
